# RAGQA

./: .env  README.md  app.py  env_loader.py  fitz.py  parse_and_chunk.py  pyproject.toml  requirements.txt  server.py
artifacts/: chunks.jsonl
chunking/: __init__.py  chunker.py  driver.py  packer.py  segmenter.py  semantic_chunker.py  types.py
configs/: models.yaml  ocr_runtime.example.toml  parser.yaml
diagnostics/: overlays.py
eval/: ablation.py  config.yaml  metrics.py  report.py  runner.py  schema.md  types.py  utils.py
examples/: sample_config.json
gold/: README.md  __init__.py  align.py  assemble.py  build_gold_llm.py  candidates.jsonl  candidates_stats.json  config.yaml  extract_candidates.py  gold.jsonl  judge.py  llm_client.py  llm_config.yaml  llm_mine.py  llm_synthesize.py  models.py  paraphrase_verify.py  prompts.py  quality.py  question_bank.py  quota.py  schema.md  spans.py  stats.json  utils.py  verify.py  window.py
parser/: __init__.py  _fitz.py  anchoring.py  classifier.py  cleaning.py  config.py  config.yaml  detector.py  detector_gpu.py  driver.py  exporter.py  extractor.py  fsm.py  grouping.py  heuristics.py  layout_detector.py  logging_utils.py  merger.py  metrics.py  ocr.py  ocr_lines.py  pdf_parser.py  pdf_pypdf.py  pdf_unstructured.py  pipeline.py  post_pass_repair.py  pp_structure.py  reading_order.py  region_assigner.py  region_fusion.py  rules_v2.py  states.py  stitcher.py  table_extractor.py  types.py  utils.py
pdf_ingest/: __init__.py  chunker.py  cli.py  column_order.py  config.py  http_app.py  logging.py  ocr.py  outputs.py  (+6 more)
(+164 files in other folders)
