[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfchunks"
version = "0.1.0"
description = "High-fidelity PDF to chunk pipeline with strict AUX isolation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "RAGQA Maintainers"}
]
dependencies = [
  "PyMuPDF==1.24.*",
  "numpy>=1.24,<2.0",
  "pandas>=2.1,<3.0",
  "rapidfuzz==3.*",
  "pyyaml>=6.0",
  "regex>=2023.0",
  "more-itertools>=9.0",
  "typing-extensions>=4.9"
]

[project.optional-dependencies]
nlp = [
  "spacy>=3.7,<3.8",
  "sentence-transformers>=2.7,<3.0"
]
vision = [
  "layoutparser==0.3.4",
  "detectron2==0.6",
  "torch==2.3.*"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["pdfchunks"]

[tool.pytest.ini_options]
addopts = "-q"
